# StructureCameraDebugging

./: CMakeLists.txt  OpenNICam.cpp  OpenNICam.h  main.cpp
cmake_modules/: FindOpenNI2.cmake
